<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="5dp"
    app:strokeColor="@color/fail_color"
    app:strokeWidth="1.25dp"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/drain_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drain" />

        <TextView
            android:id="@+id/potency_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/potency" />

        <TextView
            android:id="@+id/power_level_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_level" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/enchantment_result_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:textSize="20sp"
                android:textColor="@color/fail_color"
                tools:text="@string/enchantment_failed" />

            <TextView
                android:id="@+id/edged_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                android:text="@string/edged"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>