<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.cinua.shadowrun5alchemiecalculator.StatEntryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/stat_entry_promt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/entry_section" android:id="@+id/char_name_section" />
        <include layout="@layout/entry_section" android:id="@+id/magic_section" />
        <include layout="@layout/entry_section" android:id="@+id/skill_section" />
        <include layout="@layout/entry_section" android:id="@+id/drain_pool_section" />
        <include layout="@layout/entry_section" android:id="@+id/state_monitor_section" />

        <Button
                android:id="@+id/load_button"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/load_button_caption" />

        <Button
            android:id="@+id/save_externally_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/save_externally_button_caption" />

        <Button
                android:id="@+id/remember_button"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/save_internally_button_caption" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/continue_button_caption" />

    </LinearLayout>
</LinearLayout>